--- a/css/style2.css
+++ b/css/style2.css
@@ -563,7 +563,8 @@ body {
         transition: 0.3s ease-in-out;
         overflow: hidden;
         border-radius: 10px;
-        height: auto; }
+        height: auto;
+        line-height: 1.3; }
         @media (min-width: 768px) {
           #skills .dropdown .dropdown-content .skills-bottom .skills-item {
             flex-basis: 45%;
@@ -587,3 +588,69 @@ body {
               font-size: 1.5em; }
             #skills .dropdown .dropdown-content .skills-bottom .skills-item ul li {
               font-size: 1em; } }
+        #skills .dropdown .dropdown-content .skills-bottom .skills-item ul {
+          margin: .2em;
+          padding: .5em; }
+          #skills .dropdown .dropdown-content .skills-bottom .skills-item ul li {
+            color: #fff;
+            font-size: .9em;
+            text-align: left;
+            margin: .5em;
+            padding: .2em .4em;
+            text-transform: capitalize; }
+            #skills .dropdown .dropdown-content .skills-bottom .skills-item ul li::marker {
+              color: #ddda; }
+        #skills .dropdown .dropdown-content .skills-bottom .skills-item::after {
+          content: "";
+          position: absolute;
+          left: 0;
+          top: 0;
+          height: 100%;
+          border-radius: 10px;
+          width: 100%;
+          background: var(--overlay);
+          opacity: 0.7;
+          z-index: -1; }
+        #skills .dropdown .dropdown-content .skills-bottom .skills-item:before {
+          position: absolute;
+          content: '';
+          top: 0;
+          left: 0;
+          width: 100%;
+          border-radius: 10px;
+          height: 100%;
+          box-shadow: inset 4px 4px 5px #ddda, inset -4px -4px 5px #000;
+          z-index: 2; }
+        #skills .dropdown .dropdown-content .skills-bottom .skills-item .icon {
+          height: 80px;
+          width: 80px;
+          border: none;
+          outline: none;
+          padding: 10px;
+          margin-top: 15px;
+          margin-bottom: 20px;
+          position: relative; }
+          #skills .dropdown .dropdown-content .skills-bottom .skills-item .icon#git-icon img, #skills .dropdown .dropdown-content .skills-bottom .skills-item .icon#netlify-icon img {
+            width: 100%;
+            border-radius: 50%; }
+          #skills .dropdown .dropdown-content .skills-bottom .skills-item .icon#express-icon img {
+            border-radius: 30px; }
+          #skills .dropdown .dropdown-content .skills-bottom .skills-item .icon::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            border-radius: 50%;
+            box-shadow: 2px 2px 5px #000, inset 2px 2px 3px #ddda, inset -2px -2px 5px #000a; }
+          #skills .dropdown .dropdown-content .skills-bottom .skills-item .icon img {
+            width: 100%; }
+        #skills .dropdown .dropdown-content .skills-bottom .skills-item h2 {
+          font-size: 1.4em;
+          color: #fff;
+          margin-bottom: 10px;
+          text-transform: capitalize;
+          font-family: 'Gruppo', cursive;
+          text-decoration: underline rgba(221, 221, 221, 0.466);
+          text-underline-offset: .1em; }
