--- a/style2.scss
+++ b/style2.scss
@@ -407,6 +407,8 @@ body {
         // end of skills section-title
 
     }
+    // end of skills container
+
     // skills top section
     .skills-top {
         width: 90%;
@@ -741,14 +743,162 @@ body {
 
         // end of dropdown content ( ie. skills items)
     }
-
     // end of dropdown section
 }
-
-// end of skills container
-
 // end of skills
 
-// projects 
+// projects
+#projects {
+    // projects container
+    .projects {
+        flex-direction: column;
+        width: 100%;
+        margin: 0 auto;
+        padding: 0 0 20vh 0;
+        background-color: #29323c;
+        position: relative;
+        // section header
+        &-header {
+            width: 100%;
+            height: 170px;
+            background: rgb(255, 255, 255);
+            margin-bottom: 2em;
+            z-index: 2;
+            // section header h1
+            h1 {
+                margin-bottom: 50px;
+                background-image: linear-gradient(40deg, #000, purple, skyblue, #000, skyblue, #dc143c, #000, skyblue, #000, purple);
+                background-size: 900%;
+                background-position: 0%;
+                background-clip: text;
+                -webkit-background-clip: text;
+                -webkit-text-fill-color: transparent;
+                animation: project-h1 15s infinite;
+                // h1 animation
+                @keyframes project-h1 {
+                    100% {
+                        background-position: 100%;
+                    }
+                }
+                // end of h1 animation
+            }
+            // end of section header h1
+        }
+        // end of section header
+        // project items
+        .all-projects {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            flex-direction: column;
+            z-index: 10;
+            // project item
+            .project-item {
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                flex-direction: column-reverse;
+                width: 90%;
+                // project items on desktop : row
+                @media (min-width: 768px){
+                        flex-direction: row;
+                        margin: .5em auto;
+                }
+                // end of project items on desktop : row
+                margin: 20px auto;
+                overflow: hidden;
+                border-radius: 10px;
+                box-shadow: 0 0 5px #000a,
+                    inset 5px 5px 5px #ddda,
+                    inset -5px -5px 5px #000;
+                
+                // project tile
+                .project-tile {
+                    
+                    padding: 30px;
+                    flex-basis: 50%;
+                    width: 100%;
+                    height: 100%;
+                    line-height: 1.2em;
+                    display: flex;
+                    align-items: flex-start;
+                    justify-content: center;
+                    flex-direction: column;
+                    background-image: var(--overlay);
+                    background: #485563c5;
+                    backdrop-filter: blur(1px);
+                    transition: 1.3s ease;
+                    box-shadow: inset 5px 0px 5px rgba(150, 149, 149, 0.667),
+                                inset -3px -5px 5px #000a;
+                    // project Title (h1)
+                    h1 {
+                        font-size: 1.5em;
+                        font-weight: 900;
+                        line-height: 1em;
+                        letter-spacing: .05em;
+                        padding-bottom: 10px;
+                        text-transform: capitalize;
+                        border-bottom: 1px dashed #fff;
+                        background: linear-gradient(0deg, #b9b6b6, #fff);
+                        -webkit-background-clip: text;
+                        -webkit-text-fill-color: transparent;
+                    }
+                    // end of project Title (h1)
+                    // project details (h2 and p)
+                    h2 {
+                        font-size: 1em;
+                        line-height: 1.3;
+                        font-weight: 500;
+                        margin: .5em 0;
+                        text-transform: capitalize;
+                        color: #fff;
+                    }
+                    
+                    p {
+                        font-size: .8em;
+                        font-weight: 200;
+                        color: #ddd;
+                        margin: .5em 0;
+                    }
+                    // end of project details (h2 and p)
+                    // project link icon
+                    a {
+                        color: #fff;
+                        background: #333;
+                        margin: .4em 0;
+                        padding: .5em;
+                        border: none;
+                        outline: none;
+                        border-radius: 5px;
+                        transition: all .3s ease;
+                        position: relative;
+                        // project tile box shadow
+                        &::before {
+                            content: '';
+                            position: absolute;
+                            top: 0;
+                            left: 0;
+                            width: 100%;
+                            height: 100%;
+                            border-radius: 5px;
+                            box-shadow: inset 2px 2px 3px #ddda,
+                                        inset -2px -2px 5px #000a;
+                        }
+                        // end of project tile box shadow
+                        &:hover {
+                            color: pink;
+                        }
+                    }
+                    // end of project link icon 
+                }
+                // end of project tile 
+            }
+            // end of project item
+        }
+        // end of project items
+    }
+    // end of projects container
+} 
+// end of projects 
 
 // about 
