--- a/css/style2.css
+++ b/css/style2.css
@@ -775,3 +775,44 @@ body {
               font-style: italic; }
           #projects .projects .all-projects .project-item .project-tile a:hover h2 {
             color: yellow; }
+      #projects .projects .all-projects .project-item .project-img {
+        flex-basis: 50%;
+        width: 100%;
+        height: 100%;
+        overflow: hidden;
+        position: relative; }
+        #projects .projects .all-projects .project-item .project-img::after {
+          content: "";
+          position: absolute;
+          left: 0;
+          top: 0;
+          height: 100%;
+          width: 100%;
+          box-shadow: 0 0 5px #000a, inset 5px 5px 5px #ddda, inset -5px 0px 5px #000a;
+          background-image: linear-gradient(60deg, #29323c, 0%, #585563 100%);
+          opacity: 0.5; }
+        #projects .projects .all-projects .project-item .project-img img {
+          height: 100%;
+          width: 100%;
+          object-fit: cover;
+          border-radius: 0px;
+          border-top-left-radius: 5px;
+          border-top-right-radius: 5px;
+          transition: 0.5s ease; }
+        #projects .projects .all-projects .project-item .project-img:hover {
+          transition: 0.5s ease; }
+      #projects .projects .all-projects .project-item .tech-list {
+        padding: .5em; }
+        #projects .projects .all-projects .project-item .tech-list ul {
+          display: flex;
+          flex-wrap: wrap; }
+          #projects .projects .all-projects .project-item .tech-list ul li {
+            font-size: .7em;
+            color: #fffa;
+            list-style: none;
+            padding: .4em .3em;
+            margin-right: .1em;
+            font-style: italic;
+            letter-spacing: .05em; }
+      #projects .projects .all-projects .project-item:hover.project-item img {
+        transform: scale(1.1); }
