--- a/style2.scss
+++ b/style2.scss
@@ -919,8 +919,78 @@ body {
                     // end of project link icon 
                 }
                 // end of project tile 
-                
+                // project image
+                .project-img {
+                    flex-basis: 50%;
+                    width: 100%;
+                    height: 100%;
+                    overflow: hidden;
+                    position: relative;
+                    // project image box shadow
+                    &::after {
+                        content: "";
+                        position: absolute;
+                        left: 0;
+                        top: 0;
+                        height: 100%;
+                        width: 100%;
+                        box-shadow: 0 0 5px #000a,
+                            inset 5px 5px 5px #ddda,
+                            inset -5px 0px 5px #000a;
+                        background-image: linear-gradient(60deg, #29323c, 0%, #585563 100%);
+                        opacity: 0.5;
+                    }
+                    // end of project image box shadow
+                    // image 
+                    img {
+                        height: 100%;
+                        width: 100%;
+                        object-fit: cover;
+                        border-radius: 0px;
+                        border-top-left-radius: 5px;
+                        border-top-right-radius: 5px;
+                        transition: 0.5s ease;
+
+                    }
+                    // end of image
+                    &:hover {
+                        transition: 0.5s ease;
+
+                    }
+                }
+                // end of project image
+                // project tech list
+                .tech-list {
+                    padding: .5em;
+
+                    ul {
+                        display: flex;
+                        flex-wrap: wrap;
+
+                        li {
+                            font-size: .7em;
+                            color: #fffa;
+                            list-style: none;
+                            padding: .4em .3em;
+                            margin-right: .1em;
+                            font-style: italic;
+                            letter-spacing: .05em;
+                        }
+                    }
+
+                }
+                // end of project tech list
+                // project item img hover state
+                &:hover {
+                    &.project-item {
+                        img {
+                            transform: scale(1.1);
+                        }
+                    }
+                }
+                // end of project item img hover state 
             }
+            
             // end of project item
         }
         // end of project items
