--- a/css/style2.css
+++ b/css/style2.css
@@ -816,3 +816,77 @@ body {
             letter-spacing: .05em; }
       #projects .projects .all-projects .project-item:hover.project-item img {
         transform: scale(1.1); }
+
+#about {
+  flex-direction: column-reverse;
+  text-align: center;
+  margin: 0 auto;
+  padding: 50px 10px 100px 10px;
+  background-image: url("../img/pexels-magda-ehlers-2660262.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+  position: relative; }
+  #about::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    top: 0;
+    height: 100%;
+    width: 100%;
+    background-color: #000;
+    opacity: 0.6;
+    overflow: hidden; }
+  #about .col-right {
+    width: 93%;
+    margin-right: 30px;
+    height: auto;
+    z-index: 20;
+    background: #fff;
+    border-radius: 5px;
+    position: relative; }
+    #about .col-right .section-title::after {
+      width: 80%;
+      margin: 0 auto; }
+    #about .col-right:after {
+      position: absolute;
+      content: '';
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      border-radius: 5px;
+      z-index: -10;
+      box-shadow: inset 5px 5px 5px rgba(199, 199, 199, 0.667), inset -5px -5px 5px #000a; }
+    #about .col-right .about-title {
+      display: flex;
+      flex-direction: column;
+      padding: 1em 1.3em; }
+      #about .col-right .about-title h2 {
+        display: inline-block;
+        border-radius: 10px;
+        font-size: 1em;
+        font-weight: 500;
+        margin-bottom: 1em;
+        padding: .5em;
+        transition: .5s ease;
+        position: relative; }
+        #about .col-right .about-title h2::before, #about .col-right .about-title h2::after {
+          content: '';
+          position: absolute;
+          top: 0;
+          left: 0;
+          width: 100%;
+          height: 100%;
+          transition: .5s ease;
+          border-radius: 10px; }
+        #about .col-right .about-title h2::before {
+          box-shadow: inset 3px 3px 5px #000a, inset -3px -3px 5px #ddda; }
+        #about .col-right .about-title h2::after {
+          opacity: 0;
+          box-shadow: inset 3px 3px 5px #ddda, inset -3px -3px 5px #000a; }
+    #about .col-right:hover h2::before {
+      opacity: 0; }
+    #about .col-right:hover h2::after {
+      opacity: 1; }
