--- a/css/style2.css
+++ b/css/style2.css
@@ -913,6 +913,48 @@ body {
       margin-bottom: .5em;
       cursor: pointer;
       padding: .5em; }
+    .about .col-right article#cv {
+      display: flex;
+      justify-content: space-between;
+      font-size: 1em;
+      background-image: linear-gradient(0deg, #dc143c, #000);
+      color: #fff;
+      margin: 0 auto;
+      padding: 1em;
+      box-shadow: inset 5px 0px 5px #c7c7c7aa, inset -5px -5px 5px #000a;
+      text-transform: uppercase;
+      border-bottom-left-radius: 5px;
+      border-bottom-right-radius: 5px; }
+      @media (min-width: 1024px) {
+        .about .col-right article#cv {
+          justify-content: space-evenly; } }
+      .about .col-right article#cv a {
+        transition: .3s ease;
+        color: #fff;
+        text-shadow: var(--text-shadow-sm);
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        position: relative; }
+        .about .col-right article#cv a i {
+          background-image: linear-gradient(60deg, #fff 30%, rgba(209, 207, 207, 0.829) 60%, #fff 60%);
+          background-size: 300%;
+          background-position: right;
+          background-clip: text;
+          -webkit-background-clip: text;
+          -webkit-text-fill-color: transparent;
+          font-size: 1.5em;
+          margin: .2em auto;
+          text-shadow: none;
+          animation: icon-shine 3s linear infinite; }
+
+@keyframes icon-shine {
+  100% {
+    background-position: left; } }
+        .about .col-right article#cv a:hover {
+          transition: .3s ease;
+          transform: scale(1.1);
+          opacity: .8; }
     .about .col-right article p {
       margin-bottom: 20px;
       text-overflow: ellipsis;
@@ -920,6 +962,10 @@ body {
       padding-left: 4px;
       z-index: 13;
       font-size: .8em; }
+      .about .col-right article p .fcc-link {
+        color: #dc143c; }
+        .about .col-right article p .fcc-link:hover {
+          color: violet; }
     .about .col-right:hover #cv-download {
       transition: 1s ease;
       transform: translateY(100%);
