--- a/style2.scss
+++ b/style2.scss
@@ -1137,6 +1137,66 @@ body {
                 cursor: pointer;
                 padding: .5em;
             }
+            // links
+            &#cv {
+                display: flex;
+                justify-content: space-between;
+
+                @media (min-width: 1024px) {
+                    justify-content: space-evenly;
+                }
+
+                font-size: 1em;
+                background-image: linear-gradient(0deg, #dc143c, #000);
+                color: #fff;
+                margin: 0 auto;
+                padding: 1em;
+                box-shadow: inset 5px 0px 5px #c7c7c7aa,
+                            inset -5px -5px 5px #000a;
+                text-transform: uppercase;
+                border-bottom-left-radius: 5px;
+                border-bottom-right-radius: 5px;
+
+                a {
+                    transition: .3s ease;
+                    color: #fff;
+                    text-shadow: var(--text-shadow-sm);
+                    display: flex;
+                    flex-direction: column;
+                    align-items: center;
+                    position: relative;
+
+                    i {
+                        background-image: linear-gradient(60deg, #fff 30%, rgba(209, 207, 207, 0.829) 60%, #fff 60%);
+                        background-size: 300%;
+                        background-position: right;
+                        background-clip: text;
+                        -webkit-background-clip: text;
+                        -webkit-text-fill-color: transparent;
+                        font-size: 1.5em;
+                        margin: .2em auto;
+                        text-shadow: none;
+                        animation: icon-shine 3s linear infinite;
+                        // icon color animation
+                        @keyframes icon-shine {
+                            100% {
+                                background-position: left;
+                            }
+                        }
+                        // end of icon color animation
+                    }
+                    // link hover state
+                    &:hover {
+                        transition: .3s ease;
+  transform: scale(1.1);
+  opacity: .8;
+                    }
+                    // end of link hover state
+                }
+            }
+
+            // end of links
+
         // about me paragraph
             p {
                 margin-bottom: 20px;
@@ -1145,7 +1205,14 @@ body {
                 padding-left: 4px;
                 z-index: 13;
                 font-size: .8em;
+                .fcc-link {
+                    color: #dc143c;
+                    &:hover {
+                        color: violet;
+                    }
+                }
             }
+            
         // end of about me paragraph
         }
         // article
