--- a/css/style2.css
+++ b/css/style2.css
@@ -1085,3 +1085,186 @@ body {
       @media (min-width: 768px) {
         #contact .contact .contact-items .contact-item {
           width: 30%; } }
+      #contact .contact .contact-items .contact-item::before {
+        position: absolute;
+        content: '';
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        border-radius: 10px;
+        transition: .5s ease;
+        transform: preserve-3d;
+        box-shadow: var(--contact-shadow-hover); }
+      #contact .contact .contact-items .contact-item::after {
+        position: absolute;
+        content: '';
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        box-shadow: var(--contact-shadow);
+        border-radius: 10px;
+        z-index: -2;
+        opacity: 0;
+        transition: .5s ease; }
+      #contact .contact .contact-items .contact-item:hover {
+        transform: scale(0.96);
+        transition: .5s ease;
+        transform: preserve-3d; }
+        #contact .contact .contact-items .contact-item:hover::before {
+          opacity: 0; }
+        #contact .contact .contact-items .contact-item:hover::after {
+          opacity: 1; }
+      #contact .contact .contact-items .contact-item h1 {
+        background-image: linear-gradient(50deg, skyblue, #dc1489, skyblue, #dc1489, skyblue);
+        background-size: 300%;
+        background-clip: text;
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+        background-position: left;
+        animation: contact-h1 5s ease infinite alternate;
+        padding: .1em 1em;
+        margin: .2em auto;
+        font-size: 1.5em;
+        font-weight: 600;
+        position: relative; }
+
+@keyframes contact-h1 {
+  100% {
+    background-position: right; } }
+        #contact .contact .contact-items .contact-item h1::before, #contact .contact .contact-items .contact-item h1:after {
+          content: '';
+          position: absolute;
+          top: 0;
+          left: 0;
+          width: 100%;
+          height: 100%;
+          background: #f4f4f4;
+          z-index: -1;
+          border-radius: 10px;
+          transition: .3s ease; }
+        #contact .contact .contact-items .contact-item h1::before {
+          box-shadow: inset 2px 2px 5px #000a, inset -2px -2px 5px #ddda; }
+        #contact .contact .contact-items .contact-item h1::after {
+          opacity: 0;
+          background: #f4f4f4;
+          z-index: -1;
+          box-shadow: inset 2px 2px 5px #ddda, inset -2px -2px 5px #000a; }
+      #contact .contact .contact-items .contact-item .icon {
+        margin: 5px auto 10px auto;
+        padding: .3em .7em;
+        border-radius: 10px;
+        border: none;
+        outline: none;
+        position: relative;
+        display: grid;
+        place-items: center;
+        transition: .5s ease; }
+        #contact .contact .contact-items .contact-item .icon::before {
+          position: absolute;
+          content: '';
+          top: 0;
+          left: 0;
+          width: 100%;
+          height: 100%;
+          background: #f4f4f4;
+          border-radius: 50%;
+          box-shadow: var(--contact-shadow-hover);
+          transition: 1s ease;
+          transform: preserve-3d; }
+        #contact .contact .contact-items .contact-item .icon::after {
+          position: absolute;
+          content: '';
+          top: 0;
+          left: 0;
+          width: 100%;
+          height: 100%;
+          z-index: -1;
+          opacity: 0;
+          background: #f4f4f4;
+          border-radius: 50%;
+          box-shadow: var(--contact-shadow);
+          transition: 1s ease;
+          transform: preserve-3d; }
+        #contact .contact .contact-items .contact-item .icon img {
+          transition: 1s ease;
+          transform: scale(0.85) rotateY(40deg) skewX(20deg);
+          transform: preserve-3d; }
+      #contact .contact .contact-items .contact-item .contact-info h2 {
+        font-size: .8em;
+        line-height: 2rem;
+        font-weight: 600;
+        letter-spacing: .1em;
+        padding: .2em 1em;
+        border: none;
+        outline: none;
+        border-radius: 10px;
+        margin: .5em auto;
+        color: #000a;
+        transition: .5s ease;
+        position: relative; }
+        #contact .contact .contact-items .contact-item .contact-info h2::before {
+          position: absolute;
+          content: '';
+          top: 0;
+          left: 0;
+          width: 100%;
+          height: 100%;
+          background-color: #f4f4f4;
+          z-index: -1;
+          border-radius: 10px;
+          transition: .5s ease;
+          box-shadow: var(--contact-shadow-hover); }
+        #contact .contact .contact-items .contact-item .contact-info h2::after {
+          position: absolute;
+          content: '';
+          top: 0;
+          left: 0;
+          width: 100%;
+          height: 100%;
+          opacity: 0;
+          background: #f4f4f4;
+          z-index: -1;
+          border-radius: 10px;
+          transition: .5s ease;
+          box-shadow: var(--contact-shadow); }
+      #contact .contact .contact-items .contact-item .contact-info a {
+        font-size: 1em;
+        line-height: 2rem;
+        display: inline-block;
+        letter-spacing: .1em;
+        padding: .2em .5em;
+        border-radius: 10px;
+        margin: .7em auto;
+        background-color: #b60f30;
+        color: #fff;
+        opacity: .2;
+        transition: .5s ease;
+        position: relative;
+        box-shadow: inset 2px 2px 4px #fffa, inset -2px -2px 4px #000a; }
+        #contact .contact .contact-items .contact-item .contact-info a:hover {
+          transform: scale(0.95);
+          transition: .2s; }
+        #contact .contact .contact-items .contact-item .contact-info a:active {
+          transform: scale(0.9);
+          transition: .2s; }
+      #contact .contact .contact-items .contact-item:hover h1::before {
+        opacity: 0; }
+      #contact .contact .contact-items .contact-item:hover h1::after {
+        opacity: 1; }
+      #contact .contact .contact-items .contact-item:hover .icon::before {
+        opacity: 0; }
+      #contact .contact .contact-items .contact-item:hover .icon::after {
+        opacity: 1; }
+      #contact .contact .contact-items .contact-item:hover img {
+        transform: scale(1);
+        transform: preserve-3d; }
+      #contact .contact .contact-items .contact-item:hover .contact-info h2 {
+        transform: scaleX(1.1); }
+        #contact .contact .contact-items .contact-item:hover .contact-info h2::before {
+          opacity: 0; }
+        #contact .contact .contact-items .contact-item:hover .contact-info h2::after {
+          opacity: 1; }
+      #contact .contact .contact-items .contact-item:hover .contact-info a {
+        opacity: 1; }
