--- a/style2.scss
+++ b/style2.scss
@@ -1373,6 +1373,263 @@ body {
                 background: none;
                 backdrop-filter: blur(.1em);
                 -webkit-backdrop-filter: blur(.1em);
+                // item box shadows
+                &::before {
+                    position: absolute;
+                    content: '';
+                    top: 0;
+                    left: 0;
+                    width: 100%;
+                    height: 100%;
+                    border-radius: 10px;
+                    transition: .5s ease;
+                    transform: preserve-3d;
+                    box-shadow: var(--contact-shadow-hover);
+                }
+                &::after {
+                    position: absolute;
+                    content: '';
+                    top: 0;
+                    left: 0;
+                    width: 100%;
+                    height: 100%;
+                    box-shadow: var(--contact-shadow);
+                    border-radius: 10px;
+                    z-index: -2;
+                    opacity: 0;
+                    transition: .5s ease;
+                }
+                &:hover {
+                    transform: scale(.96);
+                    transition: .5s ease;
+                    transform: preserve-3d;
+
+                    // box shadows hover state
+                    &::before {
+                        opacity: 0;
+                    }
+
+                    &::after {
+                        opacity: 1;
+                    }
+
+                    // end of box shadows hover state
+                }
+                // end of item box shadows
+                // item headings (h1)
+                h1 {
+                    background-image: linear-gradient(50deg, skyblue, #dc1489, skyblue, #dc1489, skyblue);
+                    background-size: 300%;
+                    background-clip: text;
+                    -webkit-background-clip: text;
+                    -webkit-text-fill-color: transparent;
+                    background-position: left;
+                    animation: contact-h1 5s ease infinite alternate;
+                    padding: .1em 1em;
+                    margin: .2em auto;
+                    font-size: 1.5em;
+                    font-weight: 600;
+                    position: relative;
+                    // h1 animation
+                    @keyframes contact-h1 {
+                        100% {
+                            background-position: right;
+                        }
+                    }
+                    // end of h1 animation
+                    // heading box shadows
+                    &::before,
+                    &:after {
+                        content: '';
+                        position: absolute;
+                        top: 0;
+                        left: 0;
+                        width: 100%;
+                        height: 100%;
+                        background: #f4f4f4;
+                        z-index: -1;
+                        border-radius: 10px;
+                        transition: .3s ease;
+                    }
+                    &::before {
+                        box-shadow: inset 2px 2px 5px #000a,
+                                    inset -2px -2px 5px #ddda;
+                    }
+                    &::after {
+                        opacity: 0;
+                        background: #f4f4f4;
+                        z-index: -1;
+                        box-shadow: inset 2px 2px 5px #ddda,
+                                    inset -2px -2px 5px #000a;
+                    }
+                    // end of heading box shadows
+                }
+                // end of item headings (h1)
+                
+                // item icon 
+                .icon {
+                    margin: 5px auto 10px auto;
+                    padding: .3em .7em;
+                    border-radius: 10px;
+                    border: none;
+                    outline: none;
+                    position: relative;
+                    display: grid;
+                    place-items: center;
+                    transition: .5s ease;
+                    // contact icon box shadows
+                    &::before {
+                        position: absolute;
+                        content: '';
+                        top: 0;
+                        left: 0;
+                        width: 100%;
+                        height: 100%;
+                        background: #f4f4f4;
+                        border-radius: 50%;
+                        box-shadow: var(--contact-shadow-hover);
+                        transition: 1s ease;
+                        transform: preserve-3d;
+                    }
+                    &::after {
+                        position: absolute;
+                        content: '';
+                        top: 0;
+                        left: 0;
+                        width: 100%;
+                        height: 100%;
+                        z-index: -1;
+                        opacity: 0;
+                        background: #f4f4f4;
+                        border-radius: 50%;
+                        box-shadow: var(--contact-shadow);
+                        transition: 1s ease;
+                        transform: preserve-3d;
+                    }
+                    // end of contact icon box shadows
+                // icon image
+                img {
+                    transition: 1s ease;
+                    transform: scale(.85) rotateY(40deg) skewX(20deg);
+                    transform: preserve-3d;
+                }
+                // end of icon image
+                }
+                // of end of item icon
+                // contact-info (h2)
+                .contact-info {
+                    // h2
+                    h2 {
+                        font-size: .8em;
+                        line-height: 2rem;
+                        font-weight: 600;
+                        letter-spacing: .1em;
+                        padding: .2em 1em;
+                        border: none;
+                        outline: none;
+                        border-radius: 10px;
+                        margin: .5em auto;
+                        color: #000a;
+                        transition: .5s ease;
+                        position: relative;
+                        // details shadow
+                        &::before {
+                            position: absolute;
+                            content: '';
+                            top: 0;
+                            left: 0;
+                            width: 100%;
+                            height: 100%;
+                            background-color: #f4f4f4;
+                            z-index: -1;
+                            border-radius: 10px;
+                            transition: .5s ease;
+                            box-shadow: var(--contact-shadow-hover);
+                        }
+                        &::after {
+                            position: absolute;
+                            content: '';
+                            top: 0;
+                            left: 0;
+                            width: 100%;
+                            height: 100%;
+                            opacity: 0;
+                            background: #f4f4f4;
+                            z-index: -1;
+                            border-radius: 10px;
+                            transition: .5s ease;
+                            box-shadow: var(--contact-shadow);
+                        }
+                        // detail shadow states
+
+                        // detail shadow states
+                        // end of details shadow
+                    }
+                    // end of h2
+                    // form link
+                    a {
+                        font-size: 1em;
+                        line-height: 2rem;
+                        display: inline-block;
+                        letter-spacing: .1em;
+                        padding: .2em .5em;
+                        border-radius: 10px;
+                        margin: .7em auto;
+                        background-color: #b60f30;
+                        color: #fff;
+                        opacity: .2;
+                        transition: .5s ease;
+                        position: relative;
+                        box-shadow: inset 2px 2px 4px #fffa,
+                                    inset -2px -2px 4px #000a;
+                        
+                                    &:hover {
+                                        transform: scale(.95);
+                                        transition: .2s;
+                                    }
+                                    &:active {
+                                        transform: scale(.9);
+                                        transition: .2s;
+                                    }
+                    }
+                    // end of form link
+
+                }
+                // end of contact-info (h2 and a)
+
+                // item shadows hover state
+                &:hover {
+                    h1 {
+                        &::before {opacity:0}
+                        &::after {opacity:1}
+                    }
+                    .icon {
+                        &::before {opacity: 0;}
+                        &::after {opacity: 1;}
+                    }
+                    img {
+                        transform: scale(1);
+                        transform: preserve-3d;
+                    }
+                    .contact-info {
+                        h2 {
+                            transform: scaleX(1.1);
+
+                            &::before {
+                                opacity: 0;
+                            }
+
+                            &::after {
+                                opacity: 1;
+                            }
+                        }
+
+                        a {
+                            opacity: 1;
+                        }
+                    }
+                }
+                // end of item shadows hover state
             }
             // end of contact-item
         }
@@ -1381,3 +1638,7 @@ body {
     }
 }
 // end of contact 
+
+// footer
+
+// end of footer
